[metadata]
name = apitest
version = 0.0.1-alpha
author = Brian Cherinka
author_email = havok2063@gmail.com
description = evaluation of various web servers for API
url = https://github.com/havok2063/web_server_eval
project_urls =
	Repository = https://github.com/havok2063/web_server_eval
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
install_requires =
	flask>=1.1.2
	flask-restful>=0.3.8
	quart>=0.13.0
	blacksheep>=0.2.3
	fastapi>=0.61.1
	orjson>=3.3.1
	locust>=1.2

[options.extras_require]
dev =
	ipython>=7.9.0
	matplotlib>=3.1.1
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-cov>=2.8.1
	pytest-sugar>=0.9.2
	isort>=4.3.21
	codecov>=2.0.15
	coverage[toml]>=5.0
	ipdb>=0.12.3
	twine>=3.1.1
	wheel>=0.33.6

[isort]
line_length = 100
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = apitest
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
	*/__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov apitest --cov-report html -W ignore

[coverage:run]
branch = true
include =
	apitest/*
omit =
	*/__init__.py

[coverage:report]
exclude_lines =
